--- a/index.html
+++ b/index.html
@@ -16,29 +16,61 @@
 
     <div id="three-js-container">
         <div id="loading">
-            <div class="text-center">
-                <h6>Loading . . .</h6>
-                <div class="progress"><div class="progressbar"></div></div>
-            </div>
+                <div class="card">
+                    <div class="card-body">
+                        <div class="top-bar">
+                            L O A D I N G . . . 
+                        </div>
+                        <div class="progress"><div class="progressbar"></div></div>
+                    </div>
+                </div>
         </div>
         <canvas id="c"></canvas>
     </div>
 
-    <div class="popup-window">
-        <button id="btn-close" class="btn btn-primary">
-            close
-        </button>
+    <div class="popup-window d-none">
+        <div class="row d-flex justify-content-center align-items-center w-100 h-100">
+            <div class="col-12 col-md-6">
+
+                <div class="card">
+                    <div class="card-body">
+                        <div class="top-bar">
+                            <span></span>
+                            <div class="close" id="btn-close">&#215;</div>
+                        </div>
+                        <div class="content">
+                           
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
     </div>
 
     <div class="d-none">
+
     </div>
 
     <div id="overlay" class="container-fluid">
         <div class="row">
-            <div class="col-12 text-center">
-                <h1>Natalie-Ann Paneng</h1>
-                <p>Use your mouse to navigate the screen, click on objects to interact</p>
-                <button id="btn-begin" class="btn btn-primary">start</button>
+            <div class="col-12 col-md-6 text-center">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="top-bar">
+                            <span>Welcome</span> 
+                            <div class="close" id="opening-close">&#215;</div>
+                        </div>
+                        <audio id="opening-audio" class="d-none" src="assets/sounds/introduction.mp3" controls></audio>
+                        <div class="openingLines">
+                            <h1>Natalie-Ann Paneng</h1>
+                            <p>Use your mouse to navigate the screen, click on objects to interact</p>
+                        </div>
+                        <div id="btn-begin">
+                            <img id="beachball" src="assets/beachball.png" alt="beachball">
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
