--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
     <!-- three.js script -->
+    <script>console.log('backgroundsmall')</script>
     <script type="module" src="script.js"></script>
 </body>
 </html>
