--- a/test.html
+++ b/test.html
@@ -84,6 +84,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
     <!-- three.js script -->
+    <script>
+        console.log('changed background');
+    </script>
     <script type="module" src="test.js"></script>
 </body>
 </html>
