changed background to half size

--- a/test.html
+++ b/test.html
@@ -85,7 +85,7 @@
 
     <!-- three.js script -->
     <script>
-        console.log('changed background');
+        console.log('changed background half');
     </script>
     <script type="module" src="test.js"></script>
 </body>
